--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -17,6 +17,9 @@ $app-direction: ltr;
 @import "ionic.globals";
 
 
+$toast-ios-background : #5b2e90;
+
+
 // Shared Variables
 // --------------------------------------------------
 // To customize the look and feel of this app, you can override
