--- a/src/theme/linx.bootstrap.mobile.app.scss
+++ b/src/theme/linx.bootstrap.mobile.app.scss
@@ -14,6 +14,11 @@ $colors: (
 $toolbar-background:         #5b2e90 !default;
 
 // Toast
+$toast-ios-background: $toolbar-background;
+$toast-md-background: $toolbar-background;
+$toast-wp-background: $toolbar-background;
+
+
 
 .toast-primary {
     .toast-wrapper { background: #5b2e90; }
