--- a/src/pages/view-product/view-product.scss
+++ b/src/pages/view-product/view-product.scss
@@ -65,4 +65,10 @@ page-view-product {
             border: 3px solid orange;
         }
     }
+
+     ion-footer {
+        text-align: center;
+        color: #fff;
+        text-transform: uppercase;
+    }
 }
