--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,4 +1,5 @@
 page-home {
+    
 
     .scroll-content { margin-bottom: 0; }
 
@@ -10,6 +11,12 @@ page-home {
         &.swiper-slide--selected { border-color: #ffb200; }
 
         .slide-zoom { pointer-events: none; }
+
+        .btn-go {
+            position: absolute;
+            left: -50%;bottom: 40px;
+            transform: translateX(-50%);
+        }
     }
 
     h2 {
@@ -31,3 +38,18 @@ page-home {
     }
 }
 
+.menu {
+    list-style: none;
+    padding: .3em 0;
+    margin: 1.3em 0 3em 0;
+
+    .menu__item {
+        float: left;
+
+        font-size: 1.5em;
+        color: #333;
+        text-transform: capitalize;
+
+        margin: 0 .6em;
+    }
+}
