--- a/src/pages/view-product/view-product.scss
+++ b/src/pages/view-product/view-product.scss
@@ -12,25 +12,10 @@ page-view-product {
         background: #fff;
     }
 
-    // .product-color {
-    //     display: inline-block;
-    //     height: 60px;width: 60px;
-        
-    //     &.red { background-color: red; }
-    //     &.yellow { background-color: yellow; }
-    //     &.blue { background-color: blue; }
-    //     &.black { background-color: black; }
-    // }
-
-    // .product-size {
-    //     display: inline-block;
-    //     height: 60px; width: 60px;
-    // }
-
     //helper
     .product-item {
         display: inline-block;
-        height: 60px;width: 60px;
+        height: 40px;width: 40px;
     }
 
     .product-datails {
@@ -42,27 +27,42 @@ page-view-product {
             @extend .product-item;
 
             margin-right: .5em;
+
+            position: relative;
         }
 
         // Element 
         [class*="__red"] { background: red; }
-        [class*="__yellow"] { background: yellow; }
+        [class*="__green"] { background: green; }
         [class*="__blue"] { background: blue; }
         [class*="__black"] { background: black; }
 
         .product-sku__size {
             color: #666;
             font-weight: 400;
-            line-height: 60px;
+            line-height: 40px;
             text-align: center;
             background: #bbb;
             margin-bottom: .5em;
         }
 
         // Modifer
-        [class*="color--active"],
-        [class*="size--active"] {
+        [class*="product-sku__color--active"],
+        [class*="product-sku__size--active"] {
             border: 3px solid orange;
+        }
+
+        [class*="product-sku__color--active"]:before {
+            content: "\f3ff";
+            
+            color: #fff;
+            font-family: "Ionicons";
+            font-size: 300%;
+            line-height: 35px;
+            text-align: center;
+
+            position: absolute;
+            left: 25%;
         }
     }
 
