--- a/src/pages/view-product/view-product.scss
+++ b/src/pages/view-product/view-product.scss
@@ -12,7 +12,7 @@ page-view-product {
         background: #fff;
     }
 
-    //helper
+    // Helper
     .product-item {
         display: inline-block;
         height: 40px;width: 40px;
@@ -27,6 +27,7 @@ page-view-product {
             @extend .product-item;
 
             margin-right: .5em;
+            margin-bottom: .5em;
 
             position: relative;
         }
@@ -43,7 +44,6 @@ page-view-product {
             line-height: 40px;
             text-align: center;
             background: #bbb;
-            margin-bottom: .5em;
         }
 
         // Modifer
@@ -63,6 +63,11 @@ page-view-product {
 
             position: absolute;
             left: 25%;
+        }
+
+        // Icons
+        .rating {
+            font-size: 1.5em;
         }
     }
 
