--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,3 +18,22 @@
 .back-button {
     display: inline-block;
 }
+
+modal-wrapper {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+@media only screen and (min-height: 0px) and (min-width: 0px) {
+  .modal-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  ion-modal ion-backdrop {
+    visibility: visible;
+  }
+}
