--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -5,4 +5,22 @@ page-cart {
   //   button { width: 100px; }
   //
   // }
+
+  .cart-resume {
+    text-align: right;
+    color: #5b2e90;
+  }
+
+  .loading {
+      position: fixed;
+      width: 100vw;
+      height: 100vh;
+      top: 0;
+      left: 0;
+      z-index: 10000000;
+      text-align: center;
+      line-height: 100vh;
+      background: #fff;
+  }
+
 }
